objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Call_Logs__c</fullName>
        <description>Log notes here about the outbound call</description>
        <label>Call Logs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Outbound_Outcomes__c</fullName>
        <label>Call Outbound Outcomes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted Customer</fullName>
                </value>
                <value>
                    <fullName>Left message</fullName>
                </value>
                <value>
                    <fullName>Did not leave message</fullName>
                </value>
                <value>
                    <fullName>Contacted Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Escalated_To_Value__c</fullName>
        <description>This field will store the value of Escalated To that is set on the Parent Case</description>
        <label>Case Escalated To Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escalation – Request to Dev</fullName>
                </value>
                <value>
                    <fullName>Escalation - Direct to Cust</fullName>
                </value>
                <value>
                    <fullName>Escalation - Assistance</fullName>
                </value>
                <value>
                    <fullName>Sales - Qualifications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date_Time__c</fullName>
        <description>Date/Time when activity status set to Completed or Sent for outbound emails</description>
        <label>Close Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Artifacts__c</fullName>
        <formula>HYPERLINK( &quot;http://sharpoint/&quot; &amp; Id, &quot;Id&quot; )</formula>
        <label>Customer Artifacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <description>Used for identifying associated Case on emailhandler when a customer replied to an email from salesforce</description>
        <label>Customer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__TTG_Prime_Action_Type__c</fullName>
        <label>PRIME Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prove your value</fullName>
                </value>
                <value>
                    <fullName>Retrieve missing information</fullName>
                </value>
                <value>
                    <fullName>Insulate against competition</fullName>
                </value>
                <value>
                    <fullName>Minimize your weaknesses</fullName>
                </value>
                <value>
                    <fullName>Emphasize your strengths</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__ThirdPartyId__c</fullName>
        <label>ThirdPartyId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__ThirdPartyName__c</fullName>
        <label>Account Plan Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>TODAY() - DATEVALUE ( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <description>For open tasks, calculates the number of days between today and due date. If number is &lt;= 0 returns a blank value. If task due date is null, returns null</description>
        <formula>IF(IsClosed,NULL,IF((TODAY()-ActivityDate &gt; 0), TODAY()-ActivityDate,NULL))</formula>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_Created_and_Closed__c</fullName>
        <formula>IF(IsClosed , Close_Date_Time__c  -  Created_Date_Time__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Created and Closed</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETL_External_Id__c</fullName>
        <description>Used for SMS Process</description>
        <externalId>true</externalId>
        <label>ETL External Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Outbound_Outcomes__c</fullName>
        <label>Email Outbound Outcomes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalate_To__c</fullName>
        <description>Use as part of the case escalation process</description>
        <label>Escalate To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AU - Customer Support</fullName>
                </value>
                <value>
                    <fullName>AU - Customer Training</fullName>
                </value>
                <value>
                    <fullName>AU - Install</fullName>
                </value>
                <value>
                    <fullName>AU - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>AU - Technical Support</fullName>
                </value>
                <value>
                    <fullName>BNL - Customer Support</fullName>
                </value>
                <value>
                    <fullName>BNL - Customer Training</fullName>
                </value>
                <value>
                    <fullName>BNL - Install</fullName>
                </value>
                <value>
                    <fullName>BNL - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>BNL - Technical Support</fullName>
                </value>
                <value>
                    <fullName>CH - Customer Support</fullName>
                </value>
                <value>
                    <fullName>CH - Customer Training</fullName>
                </value>
                <value>
                    <fullName>CH - Install</fullName>
                </value>
                <value>
                    <fullName>CH - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>CH - Technical Support</fullName>
                </value>
                <value>
                    <fullName>CN - Customer Support</fullName>
                </value>
                <value>
                    <fullName>CN - Customer Training</fullName>
                </value>
                <value>
                    <fullName>CN - Install</fullName>
                </value>
                <value>
                    <fullName>CN – Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>CN - Technical Support</fullName>
                </value>
                <value>
                    <fullName>DE - Customer Support</fullName>
                </value>
                <value>
                    <fullName>DE - Customer Training</fullName>
                </value>
                <value>
                    <fullName>DE - Install</fullName>
                </value>
                <value>
                    <fullName>DE - Revenue Accounting and Controls</fullName>
                </value>
                <value>
                    <fullName>DE - Technical Support</fullName>
                </value>
                <value>
                    <fullName>EMEA - Install</fullName>
                </value>
                <value>
                    <fullName>ES - Customer Support</fullName>
                </value>
                <value>
                    <fullName>ES - Customer Training</fullName>
                </value>
                <value>
                    <fullName>ES - Install</fullName>
                </value>
                <value>
                    <fullName>ES - Revenue Accounting and Controls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Opportunity_Id__c</fullName>
        <description>this will store Existing Opportunity Id</description>
        <label>Existing_Opportunity_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FG - Copies Has Attachment flag from the email message associated with the task. Added to the Task List Views</description>
        <inlineHelpText>Email Message has attachment</inlineHelpText>
        <label>Has Email Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Requested_For_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Requested For Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Related_To_What_Name__c</fullName>
        <formula>Related_to_ObjectName__c</formula>
        <label>Object Related To What Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Related_To_Who_Name__c</fullName>
        <label>Object Related To Who Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_ObjectName__c</fullName>
        <description>will contain the name of parent object</description>
        <label>Object Related To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPQ_Change_Date__c</fullName>
        <description>Capture date/tim when Sales Phone Queue task has been changed to any other value (including no value)</description>
        <label>SPQ Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SPQ_ChangedByUserName__c</fullName>
        <description>Updated from Workflow Rule when Activity Type is changed From Sales Phone Queue to another value</description>
        <label>SPQ Changed By User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Support_Activity_Time__c</fullName>
        <description>Time related to the Sales Support Activity Type. Required if Sales Support Activity type is selected</description>
        <inlineHelpText>Required when Sales Support Activity Type is selected</inlineHelpText>
        <label>Sales Support Activity Time</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Support_Activity_Type__c</fullName>
        <description>Sales Support Activity Type</description>
        <inlineHelpText>Categorization of out-of-model activity for Sales Support</inlineHelpText>
        <label>Sales Support Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complex Quote</fullName>
                </value>
                <value>
                    <fullName>Customer Research</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>Open Territory Coverage</fullName>
                </value>
                <value>
                    <fullName>Peer Coverage</fullName>
                </value>
                <value>
                    <fullName>Rep Coverage</fullName>
                </value>
                <value>
                    <fullName>Special Projects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Lead_Id__c</fullName>
        <label>Salesforce Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Activity_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Siebel Activity Id which is migrated from Siebel Application.</description>
        <externalId>true</externalId>
        <label>Siebel Activity ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Siebel_Contact_Id__c</fullName>
        <description>Contact Siebel Id. Will be used in Siebel to create Opportunity for Tech Support activities</description>
        <label>Siebel Contact Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Owner_Area__c</fullName>
        <formula>TEXT(Owner:User.Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Owner Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Owner_Manager__c</fullName>
        <formula>Owner:User.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Related_To__c</fullName>
        <formula>IF(ISBLANK(Related_to_ObjectName__c),IF(LEFT(WhoId,3)=&apos;00Q&apos;,&apos;Lead&apos;,IF(LEFT(WhoId,3)=&apos;003&apos;,&apos;Contact&apos;,&apos;N/A&apos;)), Related_to_ObjectName__c)</formula>
        <label>Task Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_ID__c</fullName>
        <description>Used for identifying associated Case on emailhandler when a customer replied to an email from salesforce</description>
        <label>Thread ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Priority__c</fullName>
        <description>custom field will be shown on mass edit page</description>
        <inlineHelpText>Choosing None does not change the current value</inlineHelpText>
        <label>Updated Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASAP</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Status__c</fullName>
        <description>replica of status field for mass update</description>
        <inlineHelpText>Choosing None does not change the current value</inlineHelpText>
        <label>Updated Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Waiting on TMW</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Add__c</fullName>
        <label>Value Add</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SMS upsell</fullName>
                </value>
                <value>
                    <fullName>Lapsed SMS</fullName>
                </value>
                <value>
                    <fullName>NPS upsell</fullName>
                </value>
                <value>
                    <fullName>Training referral</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Polyspace referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>task_owner_is_active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task owner is active</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Book_Project_My_Open_Tasks</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Customer_Email__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Related_to_ObjectName__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Book Project My Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Tasks</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Customer_Email__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Related_to_ObjectName__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SALES My Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Tasks2</fullName>
        <columns>ACTIVITY.TASK</columns>
        <columns>Thread_ID__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Has_Attachment__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Tasks2</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MW_Customer_Support_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MW_Development_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MW_Operations</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MW_Tech_Support_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Project_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>EVENT.DURATION</columns>
        <columns>Related_to_ObjectName__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Project Activities</label>
    </listViews>
    <listViews>
        <fullName>Out_of_office</fullName>
        <booleanFilter>(1 AND 2 AND 3) AND (4 OR 5)</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>12/28/2015 6:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>cmoore</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>CHRISTIB</value>
        </filters>
        <label>Out of office</label>
    </listViews>
    <listViews>
        <fullName>Overdue_Tasks</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Nunna</value>
        </filters>
        <label>Overdue Tasks Tech Evangelists</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>SALES_My_Non_Oppty_Open_All</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Customer_Email__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Related_to_ObjectName__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Days_Open__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Related_to_ObjectName__c</field>
            <operation>notEqual</operation>
            <value>Opportunity</value>
        </filters>
        <label>SALES My Non-Oppty Open All</label>
    </listViews>
    <listViews>
        <fullName>SALES_My_Open_Tasks_Today</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Customer_Email__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Related_to_ObjectName__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>SALES My Open Tasks = &lt; Today</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Related_to_ObjectName__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>Related_to_ObjectName__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>TASK.WHAT_NAME</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <label>My Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>X02_My_Non_Opportunity_Today_s_Tasks</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Customer_Email__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Related_to_ObjectName__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Days_Open__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Related_to_ObjectName__c</field>
            <operation>notEqual</operation>
            <value>Opportunity</value>
        </filters>
        <label>SALES My Non-Oppty Past Due</label>
    </listViews>
    <listViews>
        <fullName>X02_My_Non_Oppty_Due_Today</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Customer_Email__c</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Related_to_ObjectName__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Days_Open__c</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Related_to_ObjectName__c</field>
            <operation>notEqual</operation>
            <value>Opportunity</value>
        </filters>
        <label>SALES My Non-Oppty Due Today</label>
    </listViews>
    <listViews>
        <fullName>activities__Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__Today_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Today + Overdue Tasks</label>
        <sharedTo>
            <group>List_View_Admin_Only</group>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>